History of this buildout
========================

5.1.14 (unreleased)
-------------------

- Add Plone edit bar rules and styling.
- Basic Diazo to copy content.
  [coen]

- Add theme custom view
- Add the view to a default page.
  [coen]

- Fix arrow path.
  [coen]

- Add homepage view, template, diazo rules.
  [coen]

- Register faceted preview template for file attachments
  [coen]

- Add year select widget
  [coen]

- Add cunstom template for advice preview in faceted navigation.
  [coen, maurits]

- Add custom section radio widget based on the default radio widget from
  faceted navigation. Select all, website or Digibib.
  [coen, maurits]

- Install EEA.facetednavigation, MailChimp and Minaraad.theme products.
  [coen]

- Select default skin
  [coen]

- Do not put content in subfolders.
  [coen]

- Add year widget for faceted navigation
  [coen, maurits]

- Remove resources directory and contents.
  [coen]

- Add vocabularies for faceted navigation
  [coen]

- Unassign right column portlets
  [coen]

- Move redundant top level folders into an unpublished folder.
  [coen]

- Add migrate step to move content to theme folders and subfolders
  [coen]

- Install plone.api
- Add CT Theme
- Add Creation migration of themes
- Add event subscriber to create theme sub folders
- Sort versions.cfg
  [coen]

- Remove portal tabs submenu on hover. HTML and JS.
  [coen]

- Remove MinaraadConfigletView. Used to CRUD themes.
  [coen]

- Add CT theme (folder)
  [coen]

- Rename werkveld > theme
  [coen]

- Add minaraad theme to project.
  [coen]

- Add upgrade step
- Remove portal action 'Mijn abonnementen'
- Remove configlet 'subscribers overview'
  [coen]

- Removed built-in newsletter functionality in favor of mailchimp
  [diederik]

- Pinned slightly newer AccessControl to get rid of starup errors.
  [coen]

- Create upgrade notes for upgrade to Plone 3.4.6.
  [coen]

- Merge minaraad.theme to src dir. All is now in one repository.
  [coen]

- Removed LinkedIn portlet.