@@ -202,39 +202,7 @@
 
           </main>
 
-          <!-- Modal -->
-          <div class="modal fade" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Login via Github</h4>
-                </div>
-                <div class="modal-body">
-                  <p class="lead">Quid securi etiam tamquam eu fugiat nulla
-                    pariatur. Gallia est omnis divisa in partes tres, quarum.
-                    Phasellus laoreet lorem vel dolor tempus vehicula. Cras
-                    mattis iudicium purus sit amet fermentum.</p>
-                  <p>Sed haec quis possit intrepidus aestimare tellus.
-                  Praeterea iter est quasdam res quas ex communi. Integer
-                  legentibus erat a ante historiarum dapibus. Non equidem invideo,
-                  miror magis posuere velit aliquet. Curabitur est gravida et
-                  libero vitae dictum. Unam incolunt Belgae, aliam Aquitani,
-                  tertiam.</p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">
-                    Cancel
-                  </button>
-                  <a href="#" type="button" class="btn btn-primary">
-                    Okay, take me to Github
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
+      </div>
 
     </metal:block>
     </body>
