@@ -17,14 +17,14 @@
 
         <div class="content-wrapper">
 
-          <!--?<div class="breadcrumbbar">-->
-            <!--?<div class="container">-->
-                <!--?<ol class="breadcrumb">-->
-                  <!--?<li><a href="home.html"><i class="fa fa-home"></i></a></li>-->
-                  <!--?<li class="active">Thema’s</li>-->
-                <!--?</ol>-->
-            <!--?</div>-->
-          <!--?</div>-->
+          <div class="breadcrumbbar">
+            <div class="container">
+                <ol class="breadcrumb">
+                  <li><a href="home.html"><i class="fa fa-home"></i></a></li>
+                  <li class="active">Thema’s</li>
+                </ol>
+            </div>
+          </div>
 
           <main role="main" id="main-container">
 
@@ -32,7 +32,7 @@
               <div  class="container">
 
                 <div class="sec-header">
-                  <h2><a href="#">Thema’s</a></h2>
+                  <h2>Thema’s</h2>
                 </div>
 
                 <div class="row">
